=================
Changes for Crate
=================

Unreleased
==========

 - Fix: Querying from information_schema while a table is created could
   cause an error

 - Fixed a NPE that was thrown if a SELECT statement contained `_score` in the
   result columns and an ORDER BY clause.

 - Fix: selecting error from sys.jobs_log caused a NPE in some cases

 - Updated crate-admin to 0.13.4 which includes following changes:

    - fix: approximate number of underreplicated and missing records per table was
      calculated incorrectly, which could have lead to different results
      when viewing table info on admin ui of different nodes

 - Fix: load Crate plugins only once on node start

 - Updated crate-admin to 0.13.3 which includes following changes:

    - fix: automatically refresh load history chart on overview page

 - Fixed an issue that caused `sys.shards` queries to omit unassigned shards
   if the query was made against a node that has `node.data` set to false

 - Fixed an issue that caused nodes fail to start if `node.client` was set to true.

 - Fix: Fixed a bug where some searchers were not properly closed

 - Fixed a race condition that could cause `DROP TABLE IF EXISTS` to fail if
   the table was concurrently dropped.

 - Fixed a race condition in `ALTER TABLE <partitioned_table>` that could occur
   if a `DELETE FROM <partitioned_table>` was invoked immediately before the
    `ALTER TABLE` statement.

2015/06/16 0.50.0
=================

NOTE: Upgrading from 0.49 or earlier versions requires a full cluster restart

 - Updated crate-admin to 0.13.2 which includes following changes:

    - improved layout for smaller screens

    - improved load graph on overview page

    - display load, cpu usage, disk i/o, process stats and shard information
      on node detail page

    - added columns with partition values on "Partitions" table
      on table detail view

 - Added ``probe_timestamp`` child expressions for os, process, heap, mem, and