@@ -220,11 +220,11 @@ In case of ``primaries`` availability only the primary shards of tables with
    ... FROM information_schema.tables
    ... WHERE number_of_replicas = 0 and schema_name in ('blob', 'doc')
    ... ORDER BY schema, "table" ;
-   +--------+-------------------+
-   | schema | table             |
-   +--------+-------------------+
+   +--------+----------+
+   | schema | table    |
+   +--------+----------+
    ...
-   +--------+-------------------+
+   +--------+----------+
    SELECT ... rows in set (... sec)
 
 
